@@ -1,3 +1,10 @@
+2000-08-22  Mo DeJong  <mdejong@redhat.com>
+
+	* src/tests/tcljava/tests/JavaTest.java:
+	* tests/tcljava/JavaInvoke.test: Add identity
+ 	test case for passing of a java.lang.String
+	ReflectObject to a Java method.
+
 2000-08-20  Christian Krone  <krischan@sql.de>
 
 	* src/jacl/tcl/lang/LreplaceCmd.java:
